[package]
name = "tcp-channel-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
tls = ["openssl", "openssl-sys", "tokio-openssl"]

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util"] }
log = "0.4"
aqueue = "1.3"
async-trait = "0.1"
anyhow = "1.0"
async-channel = "2"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
tokio-openssl = { version = "0.6", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
env_logger = "0"
tcpclient = "2"
