[package]
name = "tcp-channel-server"
version = "0.2.0"
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/tcp_channel_server"
documentation = "https://docs.rs/tcp_channel_server"
description = "rust tcp channel server frame."

[features]
default = []
tls = ["openssl", "openssl-sys", "tokio-openssl"]

[dependencies]
tokio = { version = "1", features = ["rt", "net", "io-util"] }
log = "0.4"
aqueue = "1.3"
async-trait = "0.1"
anyhow = "1.0"
async-channel = "2"
openssl = { version = "0.10", optional = true }
openssl-sys = { version = "0.9", optional = true }
tokio-openssl = { version = "0.6", optional = true }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
env_logger = "0"
tcpclient = "2"
